force-app/main/default/objects/Account_Team_Member__c/Account_Team_Member__c.object-meta.xml
<CustomObject>
    <label>Account Team Member</label>
    <pluralLabel>Account Team Members</pluralLabel>
    <nameField>
        <label>Team Member Name</label>
        <type>AutoNumber</type>
        <displayFormat>ATM-{0000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>Custom object to store Account Team Members accessible from Experience Cloud sites</description>
</CustomObject>