force-app/main/default/objects/Account_Team_Member__c/fields/Team_Member_User__c.field-meta.xml
<CustomField>
    <fullName>Team_Member_User__c</fullName>
    <label>Team Member User</label>
    <type>Lookup</type>
    <required>true</required>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Account Team Memberships</relationshipLabel>
    <relationshipName>Account_Team_Memberships</relationshipName>
</CustomField>